[project]
name = "kozrandbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.27.0",
    "aiohttp>=3.13.5",
    "hypothesis==6.152.1",
    "klocmod>=0.3.1",
    "prometheus-client>=0.25.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
